--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -1,13 +1,18 @@
-*{
+@tailwind base;
+@tailwind components;
+@tailwind utilities;
+
+* {
   padding: 0;
   margin: 0;
   box-sizing: border-box;
 }
-body , html{
+body,
+html {
   width: 100%;
   height: auto;
 }
-html{
+html {
   scroll-behavior: smooth;
 }
 
@@ -98,7 +103,7 @@ video {
   border: 0;
   font-size: 100%;
   vertical-align: baseline;
-  font-family: 'Inter', sans-serif;
+  font-family: "Inter", sans-serif;
   font-style: normal;
 }
 
@@ -126,15 +131,94 @@ ul {
   list-style: none;
 }
 
-.wrapper-div{
+.wrapper-div {
   position: relative;
-  overflow: hidden ;
+  overflow: hidden;
 }
-img{
+img {
   max-width: 100%;
   height: auto;
 }
-a{
+a {
   display: inline-block;
   text-decoration: none !important;
+}
+.sidebar-item {
+  @apply flex items-center gap-2 px-3 py-2 rounded hover:bg-gray-100 text-gray-700 transition-colors;
+}
+.sidebar-item.active {
+  @apply bg-gray-200 font-semibold;
+}
+.sidebar-subitem {
+  @apply flex items-center gap-2 text-sm px-3 py-1 hover:bg-gray-100 text-gray-600 rounded;
+}
+.sidebar-subitem.active {
+  @apply bg-gray-200 font-medium text-gray-800;
+}
+
+.chart-container {
+  margin: auto;
+  background: #fff;
+  border-radius: 40px;
+  max-width: auto;
+  padding: 0px;
+  position: relative;
+  box-shadow: 0 12px 30px rgba(0, 0, 0, 0.06);
+}
+
+#chart {
+  height: 400px;
+  margin-top: -30px;
+}
+
+.custom-legend {
+  display: flex;
+  justify-content: center;
+  gap: 20px;
+  margin-top: 0px;
+  flex-wrap: wrap;
+}
+
+.legend-item {
+  background: #fff;
+  border-radius: 20px;
+  padding: 12px 20px;
+  display: flex;
+  align-items: center;
+  gap: 10px;
+  font-weight: 600;
+  font-size: 13px;
+  color: #222;
+  box-shadow: 0 6px 18px rgba(0, 0, 0, 0.08);
+  transition: all 0.2s ease-in-out;
+}
+
+.legend-item:hover {
+  transform: scale(1.05);
+  box-shadow: 0 10px 25px rgba(0, 0, 0, 0.12);
+}
+
+.legend-dot {
+  width: 14px;
+  height: 14px;
+  border-radius: 50%;
+}
+
+/* Tooltip override */
+.highcharts-tooltip {
+  filter: drop-shadow(0 6px 15px rgba(0, 0, 0, 0.12));
+  border-radius: 14px !important;
+}
+
+@keyframes pulse {
+  0%,
+  100% {
+    transform: scale(1);
+    opacity: 1;
+  }
+
+  50% {
+    transform: scale(1.1);
+    opacity: 0.75;
+  }
 }
