--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -250,6 +250,23 @@ a {
   font-size: 24px;
 }
 
+.flex-card:hover{
+	align-items: center;
+	background-color: #FFFFFF;
+	border: 0.833333px solid #2563EB80;
+	border-radius: 8px;
+	box-shadow: #00000000 0px 0px 0px 0px, #00000000 0px 0px 0px 0px, #0000001A 0px 1px 3px 0px, #0000001A 0px 1px 2px -1px;
+	box-sizing: border-box;
+	cursor: pointer;
+	display: flex;
+	flex-direction: column;
+	gap: 12px;
+	justify-content: center;
+	padding: 24px;
+	transition: color 0.15s cubic-bezier(0.4, 0, 0.2, 1), background-color 0.15s cubic-bezier(0.4, 0, 0.2, 1), border-color 0.15s cubic-bezier(0.4, 0, 0.2, 1), text-decoration-color 0.15s cubic-bezier(0.4, 0, 0.2, 1), fill 0.15s cubic-bezier(0.4, 0, 0.2, 1), stroke 0.15s cubic-bezier(0.4, 0, 0.2, 1);
+
+}
+
 @keyframes pulse {
 
   0%,
