--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -195,6 +195,18 @@ a {
   filter: drop-shadow(0 6px 15px rgba(0, 0, 0, 0.12));
   border-radius: 14px !important;
 }
+.search-button {
+  padding: 8px 16px;
+  background-color: #007bff; /* Blue */
+  color: white;
+  border: none;
+  border-radius: 4px;
+  cursor: pointer;
+}
+
+.search-button:hover {
+  background-color: #0056b3;
+}
 
 .footer {
   background-color: #ffffff;
