fix the pie chart

--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -456,6 +456,9 @@ main {
   #sidebar.open {
     left: 0;
   }
+  .chart-container {
+    padding: 0 !important;
+  }
 }
 
 @media (max-width: 768px) {
