add changes in the desing

--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -466,8 +466,11 @@ main {
   .chart-container {
     padding: 0 !important;
   }
-  .dashboard-container{
+  .dashboard-container {
     padding: 8px !important;
+  }
+  .main-div {
+    padding: 10px 8px !important;
   }
 }
 
