--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -449,6 +449,10 @@ main {
   overflow-x: auto;
 }
 
+.dash-bordee {
+	border: 0.8px solid #E5E7EB;
+}
+
 @media (max-width: 768px) {
   #sidebar {
     position: fixed;
