add date pciker

--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -363,7 +363,7 @@ main {
   flex: 1 1 200px;
 }
 
-input[type="text"] {
+input[type="date"] {
   width: 100%;
   padding: 10px;
   border: 1px solid #ccc;
@@ -371,19 +371,35 @@ input[type="text"] {
   font-size: 16px;
 }
 
-.search-button {
-  padding: 10px 20px;
-  background-color: #007bff;
-  color: white;
-  border: none;
+.input-fav {
+  box-sizing: border-box;
+  color: #6b7280;
+  font-family: ui-sans-serif, system-ui, sans-serif, "Apple Color Emoji",
+    "Segoe UI Emoji", "Segoe UI Symbol", "Noto Color Emoji";
+  line-height: 24px;
+  align-items: center;
+  appearance: button;
+  background-color: #f1f5f9;
+  border: 0.8px solid #e2e8f0;
   border-radius: 6px;
   cursor: pointer;
-  font-size: 16px;
+  display: flex;
+  gap: 8px;
+  justify-content: flex-start;
+  padding: 8px 16px;
+  transition: color 0.15s cubic-bezier(0.4, 0, 0.2, 1),
+    background-color 0.15s cubic-bezier(0.4, 0, 0.2, 1),
+    border-color 0.15s cubic-bezier(0.4, 0, 0.2, 1),
+    text-decoration-color 0.15s cubic-bezier(0.4, 0, 0.2, 1),
+    fill 0.15s cubic-bezier(0.4, 0, 0.2, 1),
+    stroke 0.15s cubic-bezier(0.4, 0, 0.2, 1);
 }
 
-.search-button:hover {
-  background-color: #0056b3;
+.input-fav:focus {
+  border: 0.8px solid #e2e8f0;
+  outline: none; 
 }
+
 
 .dashboard-container {
   background-color: #ffffff;
@@ -500,6 +516,7 @@ input[type="text"] {
     transform: translateY(0);
   }
 }
+
 @keyframes float {
   0%,
   100% {
